Motion blur gives incorrect result on object parented to rigid body #43484

Closed
opened 2015-01-30 11:27:52 +01:00 by gandalf3 · 13 comments
Member

System Information
Archlinux
GTX 460

Blender Version
Broken: 6b81ee6, 2.73

Short description of error
Motion blur fails on object parented to rigid body

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Open motionblur_fails_on_specific_setup.blend
  2. Simulate the rigid body sim
  3. Pick a frame where the monkey is in frame and render
  4. The hat appears messed up
  5. Disable motion blur and render again
  6. Hat appears normal
**System Information** Archlinux GTX 460 **Blender Version** Broken: 6b81ee6, 2.73 **Short description of error** Motion blur fails on object parented to rigid body **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Open [motionblur_fails_on_specific_setup.blend](https://archive.blender.org/developer/F139915/motionblur_fails_on_specific_setup.blend) 2. Simulate the rigid body sim 3. Pick a frame where the monkey is in frame and render 6. The hat appears messed up 5. Disable motion blur and render again 7. Hat appears normal
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @Praful

Added subscriber: @Praful
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Seems like particles are broken again. Rendering without particles works fine, as long as you bake the rigid body sim (that's always highly recommended for motion blur). You can make 2 copies of the hat object to work around it, one invisible to serve just as particle emitter, the other for rendering with motion blur.

Seems like particles are broken again. Rendering without particles works fine, as long as you bake the rigid body sim (that's always highly recommended for motion blur). You can make 2 copies of the hat object to work around it, one invisible to serve just as particle emitter, the other for rendering with motion blur.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Lukas Tönne was assigned by Julian Eisel 2015-02-02 00:59:25 +01:00
Member

So, will you have a look @LukasTonne?

So, will you have a look @LukasTonne?
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Or @Sergey maybe you have an idea here?

Or @Sergey maybe you have an idea here?

This issue was referenced by d4c1e98dd4

This issue was referenced by d4c1e98dd4bc0b5a9a01d8ffffe747fe5b9ee73b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d4c1e98dd4.

Closed by commit d4c1e98dd4.

This issue was referenced by blender/cycles@3e3d6790c4

This issue was referenced by blender/cycles@3e3d6790c41f6e95a2c5f2c1ddb54797e634e434
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43484
No description provided.